--- a/styles/components/Layout/Layout.module.css
+++ b/styles/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 100vw;
-  grid-template-rows: 8vh 92vh;
+  grid-template-rows: 8vh auto-fit;
 }
 
 .topbar {
